appId: com.andhraessence.app
name: TC-LOGIN-003 Successful Login
env:
  EMAIL: customer@example.com
  PASSWORD: customer123
---
- launchApp
- waitForAnimationToEnd
- tapOn: { text: "Skip to Home" }
- waitForAnimationToEnd
- tapOn: { text: "Profile" }
- waitForAnimationToEnd
- waitForAnimationToEnd
- tapOn: { id: input-email }
- inputText: ${EMAIL}
- tapOn: { id: input-password }
- inputText: ${PASSWORD}
- tapOn: { id: btn-signin }
- waitForAnimationToEnd
- waitForAnimationToEnd
- waitForAnimationToEnd
- waitForAnimationToEnd
- takeScreenshot: { name: login_success_home }
